--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 h{
-    color:cyan;
+    color:rgba(255, 0, 0, 0.493);
 }
 p{
-    color:blueviolet;
+    color:aquamarine;
 }
 div{
-    color:aqua;
+    color:blue;
 }
